k8s/car-recommendation-system.yml
apiVersion: v1
kind: Namespace
metadata:
  name: recommendation-system
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-system-python
  namespace: recommendation-system
spec:
  selector:
    app: recommendation-system-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-system-nginx
  namespace: recommendation-system
spec:
  type: LoadBalancer
  selector:
    app: recommendation-system-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-system-app
  labels:
    app: recommendation-system-app
  namespace: recommendation-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation-system-app
  template:
    metadata:
      labels:
        app: recommendation-system-app
    spec:
      containers:
        - name: recommendation-system-app
          image: 187443710069.dkr.ecr.us-east-1.amazonaws.com/recommendation.system.cars:recommendation-system-$GITHUB_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-system-nginx
  labels:
    app: recommendation-system-nginx
  namespace: recommendation-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation-system-nginx
  template:
    metadata:
      labels:
        app: recommendation-system-nginx
    spec:
      containers:
        - name: recommendation-system-nginx
          image: 187443710069.dkr.ecr.us-east-1.amazonaws.com/recommendation.system.cars:nginx-$GITHUB_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: "/healthz"
    kubernetes.io/ingress.class: alb
  namespace: recommendation-system
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recommendation-system-nginx
                port:
                  number: 80
